# snip

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml
.github/workflows/: release.yml
arch/: PKGBUILD  snip.install
migrations/: 001_init.sql  002_add_language.sql  003_add_stars_and_views.sql  004_add_forks.sql  005_add_comments.sql
src/: cli.rs  config.rs  db.rs  handlers.rs  index.html  lib.rs  main.rs  models.rs  redis_cache.rs  web.rs
systemd/: snip.service  snip.tmpfiles
