[package]
name = "snip"
version = "0.2.6"
edition = "2024"

[lib]
name = "snip"
path = "src/lib.rs"

[[bin]]
name = "snipped"
path = "src/main.rs"

[[bin]]
name = "snip"
path = "src/cli.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4"] }
bcrypt = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
urlencoding = "2.1"
dirs = "5.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.27", features = ["tokio-comp"] }
tower_governor = { version = "0.8", features = ["axum"] }
